# mimir

./: .env.example  .gitignore  .mcp.json  ACT-6.2-IMPLEMENTATION-SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  Makefile  README.md  UX_WORKFLOW.md  docker-compose.prod.yml  docker-compose.yml  mimir.db  mimir_deck.pptx  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
accounts/: legal_views.py  urls.py  views.py
deploy/: docker-compose.tmpl.yml
docker/: entrypoint.sh
docs/: DOCKER_QUICK_START.md
factory/: README.md  blackboard.md
infra/: .env.example  README.md  app.py  eb_live_platform_settings.json  import-mapping-eb-only.json  import-mapping.json
mcp_integration/: tools.py
methodology/: activity_urls.py  activity_views.py  admin.py  agent_urls.py  agent_views.py  artifact_urls.py  artifact_views.py  browser_urls.py  browser_views.py  context_processors.py  feedback_views.py  notification_views.py  phase_views.py  playbook_urls.py  playbook_views.py  rule_urls.py  rule_views.py  skill_urls.py  skill_views.py  team_views.py  views.py  workflow_views.py
mimir/: health_views.py  urls.py  versioning.py
mockups/: urls.py  views.py
prompts/: feature-builder.md  manual-tester.md  release-engineer.md
scripts/: archive.sh  bb-append.sh  check-factory-prereqs.sh  claim.sh  create_default_phases.py  deploy-idle.sh  done.sh  insert_artifact_tools.py  integrate.sh  preflight.sh  promote-prod.sh  provision-factory-deps.sh  reject.sh  release.sh  rescue-result.sh  run-eb-backup.sh  status.sh  verify-result.sh
(+584 files in other folders)
